--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="jumbotron" id="home">
       <div class="container">
         <div class="text-center">
-          <img src="img/profile1.png" class="rounded-circle img-thumbnail" />
+          <img src="img/Iqra_bajuIjo2.png" id="gambarw" class="rounded-circle img-thumbnail" />
           <h1 class="display-4">Iqra Misbahudin</h1>
           <h3 class="lead">Programmer</h3>
         </div>
